--- a/meson.build
+++ b/meson.build
@@ -1,4 +1,4 @@
-project('fetchme-easy-C', 'c',
+project('fetchme', 'c',
   version : '0.1.0',
   license : 'GPL-3.0-or-later',
   default_options : ['warning_level=3'])
