--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -8,11 +8,12 @@ on:
 
 jobs:
   build:
-
+  
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v2
       
     - name: Install dependencies
-      run: make build
+      run: meson fetchme-dir &&
+cd fetchme-dir && meson compile
