--- a/src/meson.build
+++ b/src/meson.build
@@ -3,5 +3,5 @@ sources = ['fetchme.c']
 executable('fetchme',
            sources,
            c_args: default_cflags,
-           dependencies: [dep_pci, dep_xrandr, dep_x11],
+           dependencies: [dep_pci],
            install : true)
